--- a/productos.html
+++ b/productos.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <a href="index.html">
-            <img class="header__logo" src="/FrontEndStore_inicio/img/logo.png" alt="Logotipo">
+            <img class="header__logo" src="./FrontEndStore_inicio/img/logo.png" alt="Logotipo">
         </a>
     </header>
 
@@ -29,7 +29,7 @@
         <h1>ReactJS</h1>
 
         <div class="camisa">
-            <img class="camisa__react" src="/FrontEndStore_inicio/img/3.jpg" alt="imagen del producto">
+            <img class="camisa__react" src="./FrontEndStore_inicio/img/3.jpg" alt="imagen del producto">
 
             <div class="camisa__contenido">
 
