--- a/nosotros.html
+++ b/nosotros.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <a href="index.html">
-            <img class="header__logo" src="/FrontEndStore_inicio/img/logo.png" alt="Logotipo">
+            <img class="header__logo" src="./FrontEndStore_inicio/img/logo.png" alt="Logotipo">
         </a>
     </header>
 
@@ -41,7 +41,7 @@
 
             </div>
 
-            <img class="nosotros__imagen" src="/FrontEndStore_inicio/img/nosotros.jpg" alt="img nosotros">
+            <img class="nosotros__imagen" src="./FrontEndStore_inicio/img/nosotros.jpg" alt="img nosotros">
 
         </div>
 
@@ -54,25 +54,25 @@
    <div class="bloques">
 
     <div class="bloque">
-        <img class="bloque__imagen" src="/FrontEndStore_inicio/img/icono_1.png" alt="">
+        <img class="bloque__imagen" src="./FrontEndStore_inicio/img/icono_1.png" alt="">
         <h3 class="bloque__titulo"> El mejor precio</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, ducimus. Assumenda, nesciunt deserunt. Officia quasi unde consectetur, magni quis distinctio perspiciatis et est ab laborum dolor eos mollitia rem molesti class="" as!</p>
     </div> <!-- bloque -->
 
     <div class="bloque">
-        <img class="bloque__imagen"  src="/FrontEndStore_inicio/img/icono_2.png" alt="">
+        <img class="bloque__imagen"  src="./FrontEndStore_inicio/img/icono_2.png" alt="">
         <h3 class="bloque__titulo"> Para Devs</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, ducimus. Assumenda, nesciunt deserunt. Officia quasi unde consectetur, magni quis distinctio perspiciatis et est ab laborum dolor eos mollitia rem molestias!</p>
     </div> <!-- bloque -->
 
     <div class="bloque">
-        <img  class="bloque__imagen" src="/FrontEndStore_inicio/img/icono_3.png" alt="">
+        <img  class="bloque__imagen" src="./FrontEndStore_inicio/img/icono_3.png" alt="">
         <h3 class="bloque__titulo"> Envío gratis</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, ducimus. Assumenda, nesciunt deserunt. Officia quasi unde consectetur, magni quis distinctio perspiciatis et est ab laborum dolor eos mollitia rem molestias!</p>
     </div> <!-- bloque -->
 
     <div class="bloque">
-        <img class="bloque__imagen" src="/FrontEndStore_inicio/img/icono_4.png" alt="">
+        <img class="bloque__imagen" src="./FrontEndStore_inicio/img/icono_4.png" alt="">
         <h3 class="bloque__titulo"> La mejor calidad</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, ducimus. Assumenda, nesciunt deserunt. Officia quasi unde consectetur, magni quis distinctio perspiciatis et est ab laborum dolor eos mollitia rem molestias!</p>
     </div> <!-- bloque -->
