modificando-css-html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <a href="index.html">
-            <img class="header__logo" src="/FrontEndStore_inicio/img/logo.png" alt="Logotipo">
+            <img class="header__logo" src="./FrontEndStore_inicio/img/logo.png" alt="Logotipo">
         </a>
     </header>
 
