--- a/productos.html
+++ b/productos.html
@@ -44,7 +44,7 @@
                     <select class="formulario__campo">
                         <option value="" disabled selected>--Seleccionar Talla--</option>
                         <option value="">Pequeña</option>
-                        <option value="">Medeiana</option>
+                        <option value="">Mediana</option>
                         <option value="">Grande</option>
                     </select>
 
